--- a/src/web/templates/_layout.html
+++ b/src/web/templates/_layout.html
@@ -63,7 +63,7 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                             <i class="icon-user icon-large"></i>
-                            {{ handler.get_current_username('screen_name') }}
+                            {{ handler.get_current_userinfo('screen_name') }}
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
@@ -96,7 +96,7 @@
     </footer>
 </div>
 
-{{handler.settings['static_path']}} {{static_url('')}}
+
 <!-- JavaScript -->
 {% if handler.settings['debug'] == False %}
 <script src="http://code.jquery.com/jquery-latest.js"></script>
