--- a/src/web/templates/authenticated/index.html
+++ b/src/web/templates/authenticated/index.html
@@ -5,5 +5,5 @@
 {% end %}
 
 {% block content %}
-<h2>You are id {{ handler.get_current_userinfo() }}! </h2>
+<h2>You are logged in!</h2>
 {% end %}
